--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,79 @@
-GOALS.md
+# -----------------------------------------------------------------------------
+# PySme .gitignore
+# -----------------------------------------------------------------------------
 
-/.venv/
+# === Python ===
+**/__pycache__/
+**/*.py[cod]
+**/*.pyo
+**/*.pyd
+**/*.pdb
+**/*.pkl
+**/*.log
+**/*.pot
+**/*.mo
+**/*.pyc
+**/*.coverage
+**/*.cover
+**/*.py,cover
+**/.pytest_cache/
+**/.coverage
+**/coverage.xml
+**/htmlcov/
+**/.mypy_cache/
+**/.pyre/
+.**/pytype/
+**/.dmypy.json
+**/.cache/
+**/.ruff_cache/
+**/.mutmut-cache/
+
+# Virtual environments
+.venv/
+venv/
+env/
+ENV/
+
+# Jupyter / IPython
+.ipynb_checkpoints
+*.ipynb
+
+# === Rust / Cargo ===
+**/target/
+**/Cargo.lock    # If building a lib crate only; keep if you want lockfile in repo
+*.rlib
+
+# === Node / Tailwind ===
+**/node_modules/
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
+**/pnpm-debug.log*
+**/package-lock.json    # Keep or ignore depending on lockfile policy
+**/.pnp/
+**/.pnp.js
+**/dist/
+**/build/
+**/.tmp/
+**/.tmp-ssr/
+**/.next/
+**/.nuxt/
+**/out/
+
+# Tailwind generated CSS (if build output only)
+**/*.css.map
+
+# === WASM build artifacts ===
+**/*.wasm
+**/wasm-pack.log
+
+# === System / Editor ===
+**/.DS_Store
+**/Thumbs.db
+**/ehthumbs.db
+**/Desktop.ini
+**/*.swp
+**/*.swo
+*~
+.idea/
+.vscode/
